<resources>
    <string name="app_name">TicTacToe</string>
    <string name="homeTitle">Tic Tac Toe</string>
    <string name="startButton">Play Now</string>
    <string name="playButton">Play</string>

    <string name="setupTitle">Enter your Names</string>
    <string name="label1">Player 1</string>
    <string name="label2">Player 2</string>
    <string name="submitButton">Submit Names</string>
    <string name="namesHint">Enter your name</string>

    <string name="playAgain">Play Again</string>
    <string name="home">Home</string>
    <string name="changeNames">Change Names</string>
</resources>